--- a/infile.in
+++ b/infile.in
@@ -5,5 +5,9 @@ integer dimension 12
 real g0 1.73
 real e0 4.23
 real t_int 60
-
+real a 1.0
+real b 1.0
+real qqq 23
+test blah 344
 real stepsize .001
+string nameval testtest
