--- a/infile.in
+++ b/infile.in
@@ -1,15 +1,15 @@
 #file for testing io system
 CNLS rhs 
 rk45 integrator
-integer dimension 12
+integer dimension 6
 real g0 1.73
 real e0 4.23
 real t_int 60
 real relerr 1e-5
 real abserr 1e-3
 real dt_init .01
-real dt_min 1E-6
-real dt_max .01
+real dt_min 1E-10
+real dt_max 1
 real a 1.0
 real b 1.0
 real qqq 23
