fixed odd memory error in example code

--- a/infile.in
+++ b/infile.in
@@ -1,11 +1,11 @@
 #file for testing io system
-CNLS rhs 
-rk45 integrator
-integer dimension 2048 
+example_rhs rhs 
+rk4 integrator
+integer dimension 3 
 real g0 1.73
 real e0 4.23
 real t_int 60
-real relerr 1e-5
+real relerr 1e-4
 real abserr 1e-3
 real dt_init .01
 real dt_min 1E-10
@@ -15,4 +15,7 @@ real b 1.0
 real qqq 23
 test blah 344
 real stepsize .001
+real val1 9.23
+real val2 .2
+string random_info asdfasdfu
 string nameval testtest
