--- a/infile.in
+++ b/infile.in
@@ -2,12 +2,20 @@
 CNLS rhs 
 rk45 integrator
 integer dimension 1024 
-real g0 1.73
-real e0 4.23
-real t_int 60
-real relerr 1e-5
-real abserr 1e-3
-real dt_init .01
-real dt_min 1E-10
-real dt_max 0.05
-real stepsize .00511268
+real8 g0 1.73
+real8 e0 4.23
+real8 t_int 60
+real8 relerr 1e-5
+real8 abserr 1e-3
+real8 dt_init .01
+real8 dt_min 1E-10
+real8 dt_max 0.05
+real8 stepsize .00511268
+var a1 .0301763
+var a2 .06853
+var a3 .156
+var ap .355
+string names doesntmatter
+integer iterations 5
+toroidal cont
+
