Improved objective function to reflect work from paper, now very nice pulses tend to be selected as the best result

--- a/parser/makefile
+++ b/parser/makefile
@@ -1,7 +1,6 @@
 include ../make.inc
 LIB_PATH=$(LIB_MAIN)/engine
-ENG_OBJ= $(LIB_PATH)/engine_main.o $(LIB_PATH)/item.o $(LIB_PATH)/engine_read.o $(LIB_PATH)/graph.o $(LIB_PATH)/engine_run.o $(LIB_PATH)/pulse_check.o
-
+ENG_OBJ= $(LIB_PATH)/engine_main.o $(LIB_PATH)/item.o $(LIB_PATH)/engine_read.o $(LIB_PATH)/graph.o $(LIB_PATH)/engine_run.o# $(LIB_PATH)/pulse_check.o
 all: $(LIB_MAIN)/engine.o 
 
 $(LIB_MAIN)/engine.o: $(ENG_OBJ)
@@ -16,13 +15,12 @@ $(LIB_PATH)/graph.o:graph.cpp $(INLINE_HEADERS)
 $(LIB_PATH)/engine_main.o:engine.cpp $(INLINE_HEADERS)
 	@rm -f $(LIB_PATH)/engine_main.o
 	$(CPP) -c engine.cpp $(INC_PATH) $(CFLAGS) -o $(LIB_PATH)/engine_main.o
-$(LIB_PATH)/item.o:item.cpp $(INLINE_HEADERS)
+$(LIB_PATH)/item.o:item.cpp variable.cpp $(INLINE_HEADERS)
 	@rm -f $(LIB_PATH)/item.o
 	$(CPP) -c item.cpp $(INC_PATH) $(CFLAGS) -o $(LIB_PATH)/item.o
 $(LIB_PATH)/engine_run.o: engine_run.cpp $(INLINE_HEADERS)
 	@rm -f $(LIB_PATH)/engine_run.o
 	$(CPP) -c engine_run.cpp $(INC_PATH) $(CFLAGS) -o $(LIB_PATH)/engine_run.o
-$(LIB_PATH)/pulse_check.o: pulse_check.c $(INLINE_HEADERS)
-	@rm -f $(LIB_PATH)/pulse_check.o
-	$(CPP) -c pulse_check.c $(INC_PATH) $(CFLAGS) -o $(LIB_PATH)/pulse_check.o
-
+#$(LIB_PATH)/pulse_check.o: pulse_check.c $(INLINE_HEADERS)
+#	@rm -f $(LIB_PATH)/pulse_check.o
+#	$(CPP) -c pulse_check.c $(INC_PATH) $(CFLAGS) -o $(LIB_PATH)/pulse_check.o
