Functioning toroidal search and output

--- a/controller/makefile
+++ b/controller/makefile
@@ -12,6 +12,7 @@ $(LIB_MAIN)/controller.o: $(CONT_OBJ)
 	@rm -f $(LIB_MAIN)/controller.o
 	ld -r $(LIB_PATH)/*.o -o $(LIB_MAIN)/controller.o 
 $(LIB_PATH)/controller.o: controller.cpp $(INLINE_HEADERS)
+	@mkdir $(LIB_PATH)
 	@rm -f $(LIB_PATH)/controller.o
 	$(CPP) -c controller.cpp $(INC_PATH) $(CFLAGS) -o $(LIB_PATH)/controller.o
 $(LIB_PATH)/toroidal.o: toroidal.cpp $(INLINE_HEADERS)
