--- a/system/makefile
+++ b/system/makefile
@@ -1,22 +1,22 @@
-#makefile for the RHS class and derived variants
+#makefile for the system class and derived variants
 
 include ../make.inc
 
-all: $(LIB_MAIN)/rhs.o
+all: $(LIB_MAIN)/system.o
 
-LIB_PATH= $(LIB_MAIN)/rhs
+LIB_PATH= $(LIB_MAIN)/system
 
-RHS_OBJ = $(LIB_PATH)/rhs_main.o $(LIB_PATH)/rhs_CNLS.o $(LIB_PATH)/example_rhs.o
+CONT_OBJ = $(LIB_PATH)/system.o $(LIB_PATH)/jones_optical.o 
 
-$(LIB_MAIN)/rhs.o: $(RHS_OBJ)
-	@rm -f $(LIB_MAIN)/rhs.o
-	ld -r $(LIB_PATH)/*.o -o $(LIB_MAIN)/rhs.o 
-$(LIB_PATH)/rhs_main.o: rhs.cpp $(INLINE_HEADERS)
-	@rm -f $(LIB_PATH)/rhs_main.o
-	$(CPP) -c rhs.cpp $(INC_PATH) $(CFLAGS) -o $(LIB_PATH)/rhs_main.o
-$(LIB_PATH)/rhs_CNLS.o: rhs_CNLS.cpp $(INLINE_HEADERS)
-	@rm -f $(LIB_PATH)/rhs_CNLS.o
-	$(CPP) -c rhs_CNLS.cpp $(INC_PATH) $(CFLAGS) -o $(LIB_PATH)/rhs_CNLS.o
-$(LIB_PATH)/example_rhs.o: example_rhs.cpp $(INLINE_HEADERS)
-	@rm -f $(LIB_PATH)/example_rhs.o
-	$(CPP) -c example_rhs.cpp $(INC_PATH) $(CFLAGS) -o $(LIB_PATH)/example_rhs.o
+$(LIB_MAIN)/system.o: $(CONT_OBJ)
+	@rm -f $(LIB_MAIN)/system.o
+	ld -r $(LIB_PATH)/*.o -o $(LIB_MAIN)/system.o 
+$(LIB_PATH)/system.o: system.cpp $(INLINE_HEADERS)
+	@mkdir -p $(LIB_PATH)
+	@rm -f $(LIB_PATH)/system.o
+	$(CPP) -c system.cpp $(INC_PATH) $(CFLAGS) -o $(LIB_PATH)/system.o
+$(LIB_PATH)/jones_optical.o: jones_optical.cpp $(INLINE_HEADERS)
+	@mkdir -p $(LIB_PATH)
+	@rm -f $(LIB_PATH)/jones_optical.o
+	$(CPP) -c jones_optical.cpp $(INC_PATH) $(CFLAGS) -o $(LIB_PATH)/jones_optical.o
+
