Made objective function easier to read and cleaned code

--- a/objective/makefile
+++ b/objective/makefile
@@ -6,7 +6,7 @@ all: $(LIB_MAIN)/objective.o
 
 LIB_PATH= $(LIB_MAIN)/objective
 
-CONT_OBJ = $(LIB_PATH)/objective.o $(LIB_PATH)/bi_pulse_score.o
+CONT_OBJ = $(LIB_PATH)/objective.o $(LIB_PATH)/n_pulse_score.o
 
 $(LIB_MAIN)/objective.o: $(CONT_OBJ)
 	@rm -f $(LIB_MAIN)/objective.o
@@ -15,8 +15,8 @@ $(LIB_PATH)/objective.o: objective.cpp $(INLINE_HEADERS)
 	@mkdir -p $(LIB_PATH)
 	@rm -f $(LIB_PATH)/objective.o
 	$(CPP) -c objective.cpp $(INC_PATH) $(CFLAGS) -o $(LIB_PATH)/objective.o
-$(LIB_PATH)/bi_pulse_score.o: bi_pulse_score.cpp $(INLINE_HEADERS)
-	@rm -f $(LIB_PATH)/bi_pulse_score.o
-	$(CPP) -c bi_pulse_score.cpp $(INC_PATH) $(CFLAGS) -o $(LIB_PATH)/bi_pulse_score.o
+$(LIB_PATH)/n_pulse_score.o: n_pulse_score.cpp $(INLINE_HEADERS)
+	@rm -f $(LIB_PATH)/n_pulse_score.o
+	$(CPP) -c n_pulse_score.cpp $(INC_PATH) $(CFLAGS) -o $(LIB_PATH)/n_pulse_score.o
 
 
