--- a/input_files/jones_optical.in
+++ b/input_files/jones_optical.in
@@ -3,5 +3,6 @@ real8 t0 0
 real8 int_len 1.5
 real8 change_threshold 1e-3
 integer num_jones_segments 1
+integer num_pulses 2
 integer max_iterations 50
-bi_pulse_score objective
+n_pulse_score objective
