have working makefile, fixed headers to compile on nersc

--- a/integrator/makefile
+++ b/integrator/makefile
@@ -5,7 +5,7 @@ all: $(LIB_MAIN)/integrator.o
 
 LIB_PATH=$(LIB_MAIN)/integrator
 
-INT_OBJ = $(LIB_PATH)/rk4.o $(LIB_PATH)/rk45.o $(LIB_PATH)/integrator.o $(LIB_PATH)/lsoda.o
+INT_OBJ = $(LIB_PATH)/rk4.o $(LIB_PATH)/rk45.o $(LIB_PATH)/integrator.o
 
 $(LIB_MAIN)/integrator.o: $(INT_OBJ)
 	@rm -f $(LIB_MAIN)/integrator.o
