--- a/input_files/toroidal.in
+++ b/input_files/toroidal.in
@@ -1,5 +1,5 @@
 string names doesntmatter
-integer iterations 5
-real8 initial_inc .2
-real8 mul_fac 1.2
+integer iterations 1000
+real8 initial_inc .15
+real8 mul_fac 1.294784622373
 toroidal controller
