Updating makefile to seperate optimization from unneeded areas

--- a/rhs/makefile
+++ b/rhs/makefile
@@ -17,7 +17,7 @@ $(LIB_PATH)/rhs_main.o: rhs.cpp $(INLINE_HEADERS)
 	$(CPP) -c rhs.cpp $(INC_PATH)  -o $(LIB_PATH)/rhs_main.o $(CFLAGS)
 $(LIB_PATH)/rhs_CNLS.o: rhs_CNLS.cpp $(INLINE_HEADERS)
 	@rm -f $(LIB_PATH)/rhs_CNLS.o
-	$(CPP) -c rhs_CNLS.cpp $(INC_PATH)  -o $(LIB_PATH)/rhs_CNLS.o $(CFLAGS)
+	$(CPP) -c rhs_CNLS.cpp $(INC_PATH)  -o $(LIB_PATH)/rhs_CNLS.o $(FAST_FLAGS) $(CFLAGS)
 $(LIB_PATH)/example_rhs.o: example_rhs.cpp $(INLINE_HEADERS)
 	@rm -f $(LIB_PATH)/example_rhs.o
 	$(CPP) -c example_rhs.cpp $(INC_PATH)  -o $(LIB_PATH)/example_rhs.o $(CFLAGS)
