--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ rundir/*.*
 rundir/output/*
 !rundir/inputfiles
 rundir/stdout/*
+rundir/pending
+rundir/failed
 !rundir/infile.in
 !rundir/*.sh
 !*.sh
