--- a/rhs/makefile
+++ b/rhs/makefile
@@ -6,7 +6,7 @@ all: $(LIB_MAIN)/rhs.o
 
 LIB_PATH= $(LIB_MAIN)/rhs
 
-RHS_OBJ = $(LIB_PATH)/rhs_main.o $(LIB_PATH)/rhs_CNLS.o $(LIB_PATH)/example_rhs.o
+RHS_OBJ = $(LIB_PATH)/rhs_main.o $(LIB_PATH)/rhs_CNLS.o $(LIB_PATH)/rhs_SQGLE.o $(LIB_PATH)/example_rhs.o
 
 $(LIB_MAIN)/rhs.o: $(RHS_OBJ)
 	@rm -f $(LIB_MAIN)/rhs.o
@@ -21,3 +21,6 @@ $(LIB_PATH)/rhs_CNLS.o: rhs_CNLS.cpp $(INLINE_HEADERS)
 $(LIB_PATH)/example_rhs.o: example_rhs.cpp $(INLINE_HEADERS)
 	@rm -f $(LIB_PATH)/example_rhs.o
 	$(CPP) -c example_rhs.cpp $(INC_PATH)  -o $(LIB_PATH)/example_rhs.o $(CFLAGS)
+$(LIB_PATH)/rhs_SQGLE.o: rhs_SQGLE.cpp $(INLINE_HEADERS)
+	@rm -f $(LIB_PATH)/rhs_SQGLE.o
+	$(CPP) -c rhs_SQGLE.cpp $(INC_PATH)  -o $(LIB_PATH)/rhs_SQGLE.o $(FAST_FLAGS) $(CFLAGS)
