Added some python analysis code

--- a/input_files/infile.in
+++ b/input_files/infile.in
@@ -1,9 +1,10 @@
 !file for testing io system
-#include sqgle.in
-!#include rhs_CNLS.in
+!#include sqgle.in !ignore sqgle for now, is slow and likely not accurate
+#include rhs_CNLS.in
 #include rk45.in
 #include toroidal.in
-#include jones_optical_sqgle.in
-integer dimension 512
+!#include jones_optical_sqgle.in
+#include jones_optical.in
+integer dimension 512 
 
 
