Refactored make system

--- a/controller/makefile
+++ b/controller/makefile
@@ -2,19 +2,17 @@
 
 include ../make.inc
 
-all: $(LIB_MAIN)/controller.o
-
-LIB_PATH= $(LIB_MAIN)/controller
+LIB_PATH= $(LIB_MAIN)
 
 CONT_OBJ = $(LIB_PATH)/controller.o $(LIB_PATH)/toroidal.o
 
-$(LIB_MAIN)/controller.o: $(CONT_OBJ)
-	@rm -f $(LIB_MAIN)/controller.o
-	ld -r $(LIB_PATH)/*.o -o $(LIB_MAIN)/controller.o 
+all: $(CONT_OBJ)
+
+
 $(LIB_PATH)/controller.o: controller.cpp $(INLINE_HEADERS)
-	@mkdir -p $(LIB_PATH)
 	@rm -f $(LIB_PATH)/controller.o
 	$(CPP) -c controller.cpp $(INC_PATH) $(CFLAGS) -o $(LIB_PATH)/controller.o
+
 $(LIB_PATH)/toroidal.o: toroidal.cpp $(INLINE_HEADERS)
 	@rm -f $(LIB_PATH)/toroidal.o
 	$(CPP) -c toroidal.cpp $(INC_PATH) $(CFLAGS) -o $(LIB_PATH)/toroidal.o
