--- a/integrator/makefile
+++ b/integrator/makefile
@@ -1,30 +1,25 @@
 #makefile for the integrator class and derived variants
 include ../make.inc
 LIB_MAIN=../lib
-all: $(LIB_MAIN)/integrator.o
 
-LIB_PATH=$(LIB_MAIN)/integrator
+LIB_PATH=$(LIB_MAIN)
 
 INT_OBJ =  $(LIB_PATH)/rk45.o $(LIB_PATH)/integrator.o #$(LIB_PATH)/rk45_double.o $(LIB_PATH)/rk4.o
 
-$(LIB_MAIN)/integrator.o: $(INT_OBJ)
-	@rm -f $(LIB_MAIN)/integrator.o
-	ld -r $(LIB_PATH)/*.o -o $(LIB_MAIN)/integrator.o 
+all: $(INT_OBJ)
+
+
 
 $(LIB_PATH)/rk4.o: rk4.cpp $(INLINE_HEADERS)
-	@mkdir -p $(LIB_PATH)
 	@rm -f $(LIB_PATH)/rk4.o
 	$(CPP) -c rk4.cpp $(INC_PATH) $(FASTMATH) $(CFLAGS) -o $(LIB_PATH)/rk4.o
 $(LIB_PATH)/integrator.o: integrator.cpp $(INLINE_HEADERS)
 	@rm -f $(LIB_PATH)/integrator.o
 	$(CPP) -c integrator.cpp $(INC_PATH) $(CFLAGS) -o $(LIB_PATH)/integrator.o
-$(LIB_PATH)/rk45.o: rk45.cpp $(INLINE_HEADERS)
+$(LIB_PATH)/rk45.o: rk45.cpp rk45_tmpl.h $(INLINE_HEADERS)
 	@rm -f $(LIB_PATH)/rk45.o
 	$(CPP) -c rk45.cpp $(INC_PATH) $(FASTMATH) $(CFLAGS) -o $(LIB_PATH)/rk45.o
 $(LIB_PATH)/lsoda.o: lsoda.cpp $(INLINE_HEADERS)
 	@rm -f $(LIB_PATH)/lsoda.o
 	$(CPP) -c lsoda.cpp $(INC_PATH) $(CFLAGS) -o $(LIB_PATH)/lsoda.o 
-$(LIB_PATH)/rk45_double.o: rk45_double.cpp $(INLINE_HEADERS)
-	@rm -f $(LIB_PATH)/rk45_double.o
-	$(CPP) -c rk45_double.cpp $(INC_PATH)  $(CFLAGS) $(FASTMATH) -o $(LIB_PATH)/rk45_double.o
 
