Fixed small make error

--- a/utils/makefile
+++ b/utils/makefile
@@ -10,7 +10,7 @@ all: $(UTIL_OBJ)
 
 $(LIB_PATH)/utils.o: utils.cpp $(INLINE HEADERS)
 	@rm -f $(LIB_PATH)/util.o
-	$(CPP) -c utils.cpp $(CFLAGS) $(INC_PATH) -o $(LIB_PATH)/util.o
+	$(CPP) -c utils.cpp $(CFLAGS) $(INC_PATH) -o $(LIB_PATH)/utils.o
 
 $(LIB_PATH)/main.o: main.cpp $(INLINE HEADERS)
 	@rm -f $(LIB_PATH)/main.o
