Increasing type independence

--- a/simulation/makefile
+++ b/simulation/makefile
@@ -5,7 +5,7 @@ include ../make.inc
 
 LIB_PATH= $(LIB_MAIN)
 
-CONT_OBJ = $(LIB_PATH)/simulation.o $(LIB_PATH)/stable.o $(LIB_PATH)/jones_optical.o 
+CONT_OBJ = $(LIB_PATH)/simulation.o $(LIB_PATH)/stable.o $(LIB_PATH)/stable_ode.o $(LIB_PATH)/jones_optical.o 
 
 
 all: $(CONT_OBJ) 
@@ -21,4 +21,8 @@ $(LIB_PATH)/jones_optical.o: jones_optical.cpp $(INLINE_HEADERS)
 $(LIB_PATH)/stable.o: stable.cpp $(INLINE_HEADERS)
 	@rm -f $(LIB_PATH)/stable.o
 	$(CPP) -c stable.cpp $(INC_PATH) $(CFLAGS) -o $(LIB_PATH)/stable.o
+
+$(LIB_PATH)/stable_ode.o: stable_ode.cpp stable_ode_tmpl.hpp $(INLINE_HEADERS)
+	@rm -f $(LIB_PATH)/stable_ode.o
+	$(CPP) -c stable_ode.cpp $(INC_PATH) $(CFLAGS) -o $(LIB_PATH)/stable_ode.o
 
