--- a/input_files/infile.in
+++ b/input_files/infile.in
@@ -1,10 +1,9 @@
-!file for testing io system
 !#include sqgle.in !ignore sqgle for now, is slow and likely not accurate
+!#include fail_cyclical.in
 #include rhs_CNLS.in
 #include rk45.in
 #include toroidal.in
 !#include jones_optical_sqgle.in
 #include jones_optical.in
 integer dimension 512 
-
 
