Added mempool functionality, improved parallel build time on makefile

--- a/simulation/makefile
+++ b/simulation/makefile
@@ -14,7 +14,7 @@ $(LIB_PATH)/simulation.o: simulation.cpp $(INLINE_HEADERS)
 	@rm -f $(LIB_PATH)/simulation.o
 	$(CPP) -c simulation.cpp $(INC_PATH) $(CFLAGS) -o $(LIB_PATH)/simulation.o
 
-$(LIB_PATH)/jones_optical.o: jones_optical.cpp $(INLINE_HEADERS)
+$(LIB_PATH)/jones_optical.o: jones_optical.cpp stable_ode_tmpl.hpp stable_spectral_ode_tmpl.hpp $(INLINE_HEADERS)
 	@rm -f $(LIB_PATH)/jones_optical.o
 	$(CPP) -c jones_optical.cpp $(INC_PATH) $(CFLAGS) -o $(LIB_PATH)/jones_optical.o
 
