--- a/objective/makefile
+++ b/objective/makefile
@@ -18,4 +18,7 @@ $(LIB_PATH)/n_pulse_score.o: n_pulse_score.cpp $(INLINE_HEADERS)
 	@rm -f $(LIB_PATH)/n_pulse_score.o
 	$(CPP) -c n_pulse_score.cpp $(INC_PATH) $(CFLAGS) -o $(LIB_PATH)/n_pulse_score.o
 
+.PHONY: clean
 
+clean:
+	rm -f $(OBJ_OBJ)
