--- a/writer/makefile
+++ b/writer/makefile
@@ -13,3 +13,7 @@ $(LIB_PATH)/writer.o: writer.cpp writer.h data.hpp $(INLINE_HEADERS)
 	@rm -f $(LIB_PATH)/writer.o
 	$(CPP) -c writer.cpp $(INC_PATH) $(CFLAGS) -o $(LIB_PATH)/writer.o
 
+.PHONY: clean
+
+clean:
+	rm -f $(WRITE_OBJ)
