Added set dimension feature to mempool

--- a/utils/makefile
+++ b/utils/makefile
@@ -4,12 +4,12 @@ LIB_MAIN = ../lib
 
 LIB_PATH= $(LIB_MAIN)
 
-UTIL_OBJ=$(LIB_PATH)/utils.o $(LIB_PATH)/main.o $(LIB_PATH)/noise.o
+UTIL_OBJ=$(LIB_PATH)/utils.o $(LIB_PATH)/main.o $(LIB_PATH)/noise.o $(LIB_PATH)/mempool.o
 
 all: $(UTIL_OBJ)
 
 $(LIB_PATH)/utils.o: utils.cpp $(INLINE HEADERS)
-	@rm -f $(LIB_PATH)/util.o
+	@rm -f $(LIB_PATH)/utils.o
 	$(CPP) -c utils.cpp $(CFLAGS) $(INC_PATH) -o $(LIB_PATH)/utils.o
 
 $(LIB_PATH)/main.o: main.cpp $(INLINE HEADERS)
@@ -19,6 +19,11 @@ $(LIB_PATH)/main.o: main.cpp $(INLINE HEADERS)
 $(LIB_PATH)/noise.o: noise.cpp noise.h $(INLINE HEADERS)
 	@rm -f $(LIB_PATH)/noise.o
 	$(CPP) -c noise.cpp $(CFLAGS) $(INC_PATH) -o $(LIB_PATH)/noise.o
+
+$(LIB_PATH)/mempool.o: mempool.cpp $(INLINE HEADERS)
+	@rm -f $(LIB_PATH)/mempool.o
+	$(CPP) -c mempool.cpp $(CFLAGS) $(INC_PATH) -o $(LIB_PATH)/mempool.o
+
 
 .PHONY: clean
 clean:
