--- a/input_files/infile.in
+++ b/input_files/infile.in
@@ -1,8 +1,6 @@
-!#include sqgle.in !ignore sqgle for now, is slow and likely not accurate
 #include rhs_CNLS.in
 #include rk45.in
 #include toroidal.in
-!#include jones_optical_sqgle.in
 #include jones_optical.in
-integer dimension 512 
+(integer dimension 512)
 
