--- a/input_files/rk45.in
+++ b/input_files/rk45.in
@@ -1,6 +1,5 @@
-(rk45 integrator)
+(rk45 integrator (@map relerr abserr))
 (double relerr 1e-4)
-(double abserr 1e-3)
 (double dt_init .01)
 (double dt_min 1E-10)
 (double dt_max 0.1)
