--- a/rhs/makefile
+++ b/rhs/makefile
@@ -4,7 +4,7 @@ include ../make.inc
 
 LIB_PATH= $(LIB_MAIN)
 
-RHS_OBJ = $(LIB_PATH)/rhs_main.o $(LIB_PATH)/rhs_CNLS.o $(LIB_PATH)/rhs_SQGLE.o $(LIB_PATH)/example_rhs.o $(LIB_PATH)/rhs_sde.o
+RHS_OBJ = $(LIB_PATH)/rhs_main.o $(LIB_PATH)/rhs_CNLS.o $(LIB_PATH)/rhs_SQGLE.o $(LIB_PATH)/example_rhs.o $(LIB_PATH)/rhs_sde.o $(LIB_PATH)/c_elegans.o
 
 all: $(RHS_OBJ)
 
@@ -27,6 +27,11 @@ $(LIB_PATH)/rhs_SQGLE.o: rhs_SQGLE.cpp rhs_type.hpp $(INLINE_HEADERS)
 $(LIB_PATH)/rhs_sde.o: rhs_sde.cpp $(INLINE_HEADERS)
 	@rm -f $(LIB_PATH)/rhs_sde.o
 	$(CPP) -c rhs_sde.cpp $(INC_PATH)  -o $(LIB_PATH)/rhs_sde.o $(CFLAGS)
+
+$(LIB_PATH)/c_elegans.o: c_elegans.cpp $(INLINE_HEADERS)
+	@rm -f $(LIB_PATH)/c_elegans.o
+	$(CPP) -c c_elegans.cpp $(INC_PATH)  -o $(LIB_PATH)/c_elegans.o $(CFLAGS)
+
 
 .PHONY: clean
 
