Cleaning up the directory

--- a/SFMT/makefile
+++ b/SFMT/makefile
@@ -4,10 +4,14 @@ include ../make.inc
 
 LIB_PATH= $(LIB_MAIN)
 
-SFMT_OBJ =  $(LIB_PATH)/sfmt.o
+DSFMT_OBJ =  $(LIB_PATH)/dsfmt.o $(LIB_PATH)/sfmt.o
 
-all: $(SFMT_OBJ)
 
+all: $(DSFMT_OBJ)
+
+$(LIB_PATH)/dsfmt.o: dSFMT.c
+	@rm -f $(LIB_PATH)/dsfmt.o
+	$(CPP) -c dSFMT.c $(INC_PATH) -o $(LIB_PATH)/dsfmt.o -O3 -m64 -march=native $(FASTMATH) -DHAVE_SSE2 -DDSFMT_MEXP=521 -msse2
 $(LIB_PATH)/sfmt.o: SFMT.c
 	@rm -f $(LIB_PATH)/sfmt.o
 	$(CPP) -c SFMT.c $(INC_PATH) -o $(LIB_PATH)/sfmt.o -O3 -m64 -march=native $(FASTMATH) -DHAVE_SSE2 -DSFMT_MEXP=607 -msse2
@@ -15,4 +19,4 @@ $(LIB_PATH)/sfmt.o: SFMT.c
 .PHONY: clean
 
 clean:
-	rm -f $(SFMT_OBJ)
+	rm -f $(DSFMT_OBJ)
