--- a/SFMT/makefile-temp
+++ b/SFMT/makefile-temp
@@ -4,8 +4,8 @@
 # @author Mutsuo Saito (Hiroshima University)
 # @author Makoto Matsumoto (Hiroshima University)
 #
-# Copyright (C) 2007, 2013 Mutsuo Saito, Makoto Matsumoto and Hiroshima
-# University. All rights reserved.
+# Copyright (C) 2007, 2008, 2013 Mutsuo Saito, Makoto Matsumoto and
+# Hiroshima University. All rights reserved.
 #
 # The new BSD License is applied to this software.
 # see LICENSE.txt
@@ -19,11 +19,11 @@
 
 WARN = -Wmissing-prototypes -Wall #-Winline
 #WARN = -Wmissing-prototypes -Wall -W
-#WARN = -Wall
+#WARN = /Wall
 OPTI = -O3 -finline-functions -fomit-frame-pointer -DNDEBUG \
 -fno-strict-aliasing --param max-inline-insns-single=1800
 #--param inline-unit-growth=500 --param large-function-growth=900 #for gcc 4
-#OPTI = /Ot /Ob2 /Og /Oy /Ox /Oi /GL /G6
+#OPTI = /Ot /Ob2 /Oy /Ox /Oi /GL /G6
 #STD =
 #STD = -std=c89 -pedantic
 #STD = -std=c99 -pedantic
@@ -35,22 +35,15 @@ OSXALTIFLAGS = -faltivec -maltivec -DHAVE_ALTIVEC
 SSE2FLAGS = -msse2 -DHAVE_SSE2
 #SSE2FLAGS = /arch:SSE2 /DHAVE_SSE2
 STD_TARGET = test-std-M19937
-BIG_TARGET = test-big64-M19937
-ALL_STD_TARGET = test-std-M607 test-std-M1279 test-std-M2281 test-std-M4253 \
+ALL_STD_TARGET = test-std-M521 test-std-M1279 test-std-M2203 test-std-M4253 \
 test-std-M11213 test-std-M19937 test-std-M44497 test-std-M86243 \
 test-std-M132049 test-std-M216091
-ALL_BIG_TARGET = test-big64-M607 test-big64-M1279 test-big64-M2281 \
-test-big64-M4253 test-big64-M11213 test-big64-M19937 test-big64-M44497 \
-test-big64-M86243 test-big64-M132049 test-big64-M216091
-ALTI_TARGET = test-alti-M19937
-ALL_ALTI_TARGET = test-alti-M607 test-alti-M1279 test-alti-M2281 \
+ALTI_TARGET = $(STD_TARGET) test-alti-M19937
+ALL_ALTI_TARGET = test-alti-M521 test-alti-M1279 test-alti-M2203 \
 test-alti-M4253 test-alti-M11213 test-alti-M19937 test-alti-M44497 \
 test-alti-M86243 test-alti-M132049 test-alti-M216091
-ALL_ALTIBIG_TARGET = test-alti64-M607 test-alti64-M1279 test-alti64-M2281 \
-test-alti64-M4253 test-alti64-M11213 test-alti64-M19937 test-alti64-M44497 \
-test-alti64-M86243 test-alti64-M132049 test-alti64-M216091
-SSE2_TARGET = test-sse2-M19937
-ALL_SSE2_TARGET = test-sse2-M607 test-sse2-M1279 test-sse2-M2281 \
+SSE2_TARGET = $(STD_TARGET) test-sse2-M19937
+ALL_SSE2_TARGET = test-sse2-M521 test-sse2-M1279 test-sse2-M2203 \
 test-sse2-M4253 test-sse2-M11213 test-sse2-M19937 test-sse2-M44497 \
 test-sse2-M86243 test-sse2-M132049 test-sse2-M216091
 # ==========================================================
@@ -65,6 +58,13 @@ test-sse2-M86243 test-sse2-M132049 test-sse2-M216091
 # for icl
 # --------------------
 #CC = icl /Wcheck /O3 /QxB /Qprefetch
+# --------------------
+# for icc
+# --------------------
+#CC = icc
+#OPTI = -O3 -finline-functions -fomit-frame-pointer -DNDEBUG \
+#-fno-strict-aliasing
+#CCFLAGS = $(OPTI) $(WARN) $(STD)
 # -----------------
 # for PowerPC
 # -----------------
@@ -82,217 +82,117 @@ test-sse2-M86243 test-sse2-M132049 test-sse2-M216091
 
 std: $(STD_TARGET)
 
-sse2:$(SSE2_TARGET)
+sse2: $(SSE2_TARGET)
 
-alti:$(ALTI_TARGET)
+alti: $(ALTI_TARGET)
 
 osx-alti:
-	make "ALTIFLAGS=$(OSXALTIFLAGS)" alti
-
-big:$(BIG_TARGET)
+	$(MAKE) "ALTIFLAGS=$(OSXALTIFLAGS)" alti
 
 std-check: $(ALL_STD_TARGET)
-	./check.sh 32 test-std
+	./check.sh test-std
 
 sse2-check: $(ALL_SSE2_TARGET)
-	./check.sh 32 test-sse2
+	./check.sh test-sse2
 
 alti-check: $(ALL_ALTI_TARGET)
-	./check.sh 32 test-alti
+	./check.sh test-alti
 
 osx-alti-check:
 	make "ALTIFLAGS=$(OSXALTIFLAGS)" alti-check
 
-big-check: $(ALL_BIG_TARGET) $(ALL_STD_TARGET)
-	./check.sh 64 test-big64
+test-std-M521: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) -DDSFMT_MEXP=521 -o $@ dSFMT.c test.c
 
-altibig-check: $(ALL_ALTIBIG_TARGET) $(ALL_STD_TARGET)
-	./check.sh 64 test-alti64
+test-alti-M521: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DDSFMT_MEXP=521 -o $@ dSFMT.c test.c
 
-osx-altibig-check:
-	make "ALTIFLAGS=$(OSXALTIFLAGS)" altibig-check
+test-sse2-M521: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) $(SSE2FLAGS) -DDSFMT_MEXP=521 -o $@ dSFMT.c test.c
 
-test-std-M607: test.c SFMT.c SFMT.h SFMT-params607.h
-	$(CC) $(CCFLAGS) -DSFMT_MEXP=607 -o $@ test.c SFMT.c
+test-std-M1279: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) -DDSFMT_MEXP=1279 -o $@ dSFMT.c test.c
 
-test-alti-M607: test.c SFMT.c SFMT.h SFMT-alti.h SFMT-params607.h
-	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DSFMT_MEXP=607 -o $@ test.c SFMT.c
+test-alti-M1279: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DDSFMT_MEXP=1279 -o $@ dSFMT.c test.c
 
-test-sse2-M607: test.c SFMT.c SFMT.h SFMT-sse2.h SFMT-params607.h
-	$(CC) $(CCFLAGS) $(SSE2FLAGS) -DSFMT_MEXP=607 -o $@ test.c SFMT.c
+test-sse2-M1279: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) $(SSE2FLAGS) -DDSFMT_MEXP=1279 -o $@ dSFMT.c test.c
 
-test-std-M1279: test.c SFMT.c SFMT.h SFMT-params1279.h
-	$(CC) $(CCFLAGS) -DSFMT_MEXP=1279 -o $@ test.c SFMT.c
+test-std-M2203: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) -DDSFMT_MEXP=2203 -o $@ dSFMT.c test.c
 
-test-alti-M1279: test.c SFMT.c SFMT.h SFMT-alti.h SFMT-params1279.h
-	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DSFMT_MEXP=1279 -o $@ test.c SFMT.c
+test-alti-M2203: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DDSFMT_MEXP=2203 -o $@ dSFMT.c test.c
 
-test-sse2-M1279: test.c SFMT.c SFMT.h SFMT-sse2.h SFMT-params1279.h
-	$(CC) $(CCFLAGS) $(SSE2FLAGS) -DSFMT_MEXP=1279 -o $@ test.c SFMT.c
+test-sse2-M2203: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) $(SSE2FLAGS) -DDSFMT_MEXP=2203 -o $@ dSFMT.c test.c
 
-test-std-M2281: test.c SFMT.c SFMT.h SFMT-params2281.h
-	$(CC) $(CCFLAGS) -DSFMT_MEXP=2281 -o $@ test.c SFMT.c
+test-std-M4253: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) -DDSFMT_MEXP=4253 -o $@ dSFMT.c test.c
 
-test-alti-M2281: test.c SFMT.c SFMT.h SFMT-alti.h SFMT-params2281.h
-	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DSFMT_MEXP=2281 -o $@ test.c SFMT.c
+test-alti-M4253: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DDSFMT_MEXP=4253 -o $@ dSFMT.c test.c
 
-test-sse2-M2281: test.c SFMT.c SFMT.h SFMT-sse2.h SFMT-params2281.h
-	$(CC) $(CCFLAGS) $(SSE2FLAGS) -DSFMT_MEXP=2281 -o $@ test.c SFMT.c
+test-sse2-M4253: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) $(SSE2FLAGS) -DDSFMT_MEXP=4253 -o $@ dSFMT.c test.c
 
-test-std-M4253: test.c SFMT.c SFMT.h SFMT-params4253.h
-	$(CC) $(CCFLAGS) -DSFMT_MEXP=4253 -o $@ test.c SFMT.c
+test-std-M11213: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) -DDSFMT_MEXP=11213 -o $@ dSFMT.c test.c
 
-test-alti-M4253: test.c SFMT.c SFMT.h SFMT-alti.h SFMT-params4253.h
-	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DSFMT_MEXP=4253 -o $@ test.c SFMT.c
+test-alti-M11213: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DDSFMT_MEXP=11213 -o $@ dSFMT.c test.c
 
-test-sse2-M4253: test.c SFMT.c SFMT.h SFMT-sse2.h SFMT-params4253.h
-	$(CC) $(CCFLAGS) $(SSE2FLAGS) -DSFMT_MEXP=4253 -o $@ test.c SFMT.c
+test-sse2-M11213: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) $(SSE2FLAGS) -DDSFMT_MEXP=11213 -o $@ dSFMT.c test.c
 
-test-std-M11213: test.c SFMT.c SFMT.h SFMT-params11213.h
-	$(CC) $(CCFLAGS) -DSFMT_MEXP=11213 -o $@ test.c SFMT.c
+test-std-M19937: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) -DDSFMT_MEXP=19937 -o $@ dSFMT.c test.c
 
-test-alti-M11213: test.c SFMT.c SFMT.h SFMT-alti.h \
-	SFMT-params11213.h
-	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DSFMT_MEXP=11213 -o $@ test.c SFMT.c
+test-alti-M19937: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DDSFMT_MEXP=19937 -o $@ dSFMT.c test.c
 
-test-sse2-M11213: test.c SFMT.c SFMT.h SFMT-sse2.h \
-	SFMT-params11213.h
-	$(CC) $(CCFLAGS) $(SSE2FLAGS) -DSFMT_MEXP=11213 -o $@ test.c SFMT.c
+test-sse2-M19937: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) $(SSE2FLAGS) -DDSFMT_MEXP=19937 -o $@ dSFMT.c test.c
 
-test-std-M19937: test.c SFMT.c SFMT.h SFMT-params19937.h
-	$(CC) $(CCFLAGS) -DSFMT_MEXP=19937 -o $@ test.c SFMT.c
+test-std-M44497: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) -DDSFMT_MEXP=44497 -o $@ dSFMT.c test.c
 
-test-alti-M19937: test.c SFMT.c SFMT.h SFMT-alti.h \
-	SFMT-params19937.h
-	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DSFMT_MEXP=19937 -o $@ test.c SFMT.c
+test-alti-M44497: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DDSFMT_MEXP=44497 -o $@ dSFMT.c test.c
 
-test-sse2-M19937: test.c SFMT.c SFMT.h SFMT-sse2.h \
-	SFMT-params19937.h
-	$(CC) $(CCFLAGS) $(SSE2FLAGS) -DSFMT_MEXP=19937 -o $@ test.c SFMT.c
+test-sse2-M44497: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) $(SSE2FLAGS) -DDSFMT_MEXP=44497 -o $@ dSFMT.c test.c
 
-test-std-M44497: test.c SFMT.c SFMT.h SFMT-params44497.h
-	$(CC) $(CCFLAGS) -DSFMT_MEXP=44497 -o $@ test.c SFMT.c
+test-std-M86243: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) -DDSFMT_MEXP=86243 -o $@ dSFMT.c test.c
 
-test-alti-M44497: test.c SFMT.c SFMT.h SFMT-alti.h \
-	SFMT-params44497.h
-	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DSFMT_MEXP=44497 -o $@ test.c SFMT.c
+test-alti-M86243: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DDSFMT_MEXP=86243 -o $@ dSFMT.c test.c
 
-test-sse2-M44497: test.c SFMT.c SFMT.h SFMT-sse2.h \
-	SFMT-params44497.h
-	$(CC) $(CCFLAGS) $(SSE2FLAGS) -DSFMT_MEXP=44497 -o $@ test.c SFMT.c
+test-sse2-M86243: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) $(SSE2FLAGS) -DDSFMT_MEXP=86243 -o $@ dSFMT.c test.c
 
-test-std-M86243: test.c SFMT.c SFMT.h SFMT-params86243.h
-	$(CC) $(CCFLAGS) -DSFMT_MEXP=86243 -o $@ test.c SFMT.c
+test-std-M132049: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) -DDSFMT_MEXP=132049 -o $@ dSFMT.c test.c
 
-test-alti-M86243: test.c SFMT.c SFMT.h SFMT-alti.h \
-	SFMT-params86243.h
-	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DSFMT_MEXP=86243 -o $@ test.c SFMT.c
+test-alti-M132049: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DDSFMT_MEXP=132049 -o $@ dSFMT.c test.c
 
-test-sse2-M86243: test.c SFMT.c SFMT.h SFMT-sse2.h \
-	SFMT-params86243.h
-	$(CC) $(CCFLAGS) $(SSE2FLAGS) -DSFMT_MEXP=86243 -o $@ test.c SFMT.c
+test-sse2-M132049: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) $(SSE2FLAGS) -DDSFMT_MEXP=132049 -o $@ dSFMT.c test.c
 
-test-std-M132049: test.c SFMT.c SFMT.h SFMT-params132049.h
-	$(CC) $(CCFLAGS) -DSFMT_MEXP=132049 -o $@ test.c SFMT.c
+test-std-M216091: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) -DDSFMT_MEXP=216091 -o $@ dSFMT.c test.c
 
-test-alti-M132049: test.c SFMT.c SFMT.h SFMT-alti.h \
-	SFMT-params132049.h
-	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DSFMT_MEXP=132049 -o $@ test.c SFMT.c
+test-alti-M216091: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DDSFMT_MEXP=216091 -o $@ dSFMT.c test.c
 
-test-sse2-M132049: test.c SFMT.c SFMT.h SFMT-sse2.h \
-	SFMT-params132049.h
-	$(CC) $(CCFLAGS) $(SSE2FLAGS) -DSFMT_MEXP=132049 -o $@ test.c SFMT.c
+test-sse2-M216091: test.c dSFMT.c dSFMT.h
+	$(CC) $(CCFLAGS) $(SSE2FLAGS) -DDSFMT_MEXP=216091 -o $@ dSFMT.c test.c
 
-test-std-M216091: test.c SFMT.c SFMT.h SFMT-params216091.h
-	$(CC) $(CCFLAGS) -DSFMT_MEXP=216091 -o $@ test.c SFMT.c
-
-test-alti-M216091: test.c SFMT.c SFMT.h SFMT-alti.h \
-	SFMT-params216091.h
-	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DSFMT_MEXP=216091 -o $@ test.c SFMT.c
-
-test-sse2-M216091: test.c SFMT.c SFMT.h SFMT-sse2.h \
-	SFMT-params216091.h
-	$(CC) $(CCFLAGS) $(SSE2FLAGS) -DSFMT_MEXP=216091 -o $@ test.c SFMT.c
-
-test-big64-M607: test.c SFMT.c SFMT.h SFMT-params607.h
-	$(CC) $(CCFLAGS) -DONLY64 -DSFMT_MEXP=607 -o $@ test.c SFMT.c
-
-test-alti64-M607: test.c SFMT.c SFMT.h SFMT-alti.h \
-		  SFMT-params607.h
-	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DONLY64 -DSFMT_MEXP=607 -o \
-	$@ test.c SFMT.c
-
-test-big64-M1279: test.c SFMT.c SFMT.h SFMT-params1279.h
-	$(CC) $(CCFLAGS) -DONLY64 -DSFMT_MEXP=1279 -o $@ test.c
-
-test-alti64-M1279: test.c SFMT.c SFMT.h SFMT-alti.h \
-		  SFMT-params1279.h
-	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DONLY64 -DSFMT_MEXP=1279 -o \
-	$@ test.c SFMT.c
-
-test-big64-M2281: test.c SFMT.c SFMT.h SFMT-params2281.h
-	$(CC) $(CCFLAGS) -DONLY64 -DSFMT_MEXP=2281 -o $@ test.c SFMT.c
-
-test-alti64-M2281: test.c SFMT.c SFMT.h SFMT-alti.h \
-		  SFMT-params2281.h
-	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DONLY64 -DSFMT_MEXP=2281 -o \
-	$@ test.c SFMT.c
-
-test-big64-M4253: test.c SFMT.c SFMT.h SFMT-params4253.h
-	$(CC) $(CCFLAGS) -DONLY64 -DSFMT_MEXP=4253 -o $@ test.c SFMT.c
-
-test-alti64-M4253: test.c SFMT.c SFMT.h SFMT-alti.h \
-		  SFMT-params4253.h
-	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DONLY64 -DSFMT_MEXP=4253 -o \
-	$@ test.c SFMT.c
-
-test-big64-M11213: test.c SFMT.c SFMT.h SFMT-params11213.h
-	$(CC) $(CCFLAGS) -DONLY64 -DSFMT_MEXP=11213 -o $@ test.c SFMT.c
-
-test-alti64-M11213: test.c SFMT.c SFMT.h SFMT-alti.h \
-		  SFMT-params11213.h
-	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DONLY64 -DSFMT_MEXP=11213 -o \
-	$@ test.c SFMT.c
-
-test-big64-M19937: test.c SFMT.c SFMT.h SFMT-params19937.h
-	$(CC) $(CCFLAGS) -DONLY64 -DSFMT_MEXP=19937 -o $@ test.c SFMT.c
-
-test-alti64-M19937: test.c SFMT.c SFMT.h SFMT-alti.h \
-		  SFMT-params19937.h
-	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DONLY64 -DSFMT_MEXP=19937 -o \
-	$@ test.c SFMT.c
-
-test-big64-M44497: test.c SFMT.c SFMT.h SFMT-params44497.h
-	$(CC) $(CCFLAGS) -DONLY64 -DSFMT_MEXP=44497 -o $@ test.c SFMT.c
-
-test-alti64-M44497: test.c SFMT.c SFMT.h SFMT-alti.h \
-		  SFMT-params44497.h
-	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DONLY64 -DSFMT_MEXP=44497 -o \
-	$@ test.c SFMT.c
-
-test-big64-M86243: test.c SFMT.c SFMT.h SFMT-params86243.h
-	$(CC) $(CCFLAGS) -DONLY64 -DSFMT_MEXP=86243 -o $@ test.c SFMT.c
-
-test-alti64-M86243: test.c SFMT.c SFMT.h SFMT-alti.h \
-		  SFMT-params86243.h
-	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DONLY64 -DSFMT_MEXP=86243 -o \
-	$@ test.c SFMT.c
-
-test-big64-M132049: test.c SFMT.c SFMT.h SFMT-params132049.h
-	$(CC) $(CCFLAGS) -DONLY64 -DSFMT_MEXP=132049 -o $@ test.c SFMT.c
-
-test-alti64-M132049: test.c SFMT.c SFMT.h SFMT-alti.h \
-		  SFMT-params132049.h
-	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DONLY64 -DSFMT_MEXP=132049 -o \
-	$@ test.c SFMT.c
-
-test-big64-M216091: test.c SFMT.c SFMT.h SFMT-params216091.h
-	$(CC) $(CCFLAGS) -DONLY64 -DSFMT_MEXP=216091 -o $@ test.c SFMT.c
-
-test-alti64-M216091: test.c SFMT.c SFMT.h SFMT-alti.h \
-		  SFMT-params216091.h
-	$(CC) $(CCFLAGS) $(ALTIFLAGS) -DONLY64 -DSFMT_MEXP=216091 -o \
-	$@ test.c SFMT.c
+.c.o:
+	$(CC) $(CCFLAGS) -c $<
 
 clean:
-	rm -f *.o *~
+	rm -f *.o *~ test-*-M*
