--- a/input_files/jones_optical.in
+++ b/input_files/jones_optical.in
@@ -1,11 +1,11 @@
 #testing the euler integrator
-#(jones_optical simulation (euler_sde integrator (double stepsize 0.001) (integer calc_dw 0) ( double dw_weight 1)))
-(jones_optical simulation)
+(jones_optical simulation (euler_sde integrator (double stepsize 0.0002) (integer calc_dw 0) ( double dw_weight 1)))
+#(jones_optical simulation)
 (double t0 0)
 (double int_len 1.5)
 (double change_threshold 1e-3)
 (integer num_jones_segments 1)
 (double jones_int_dist 0.0)
 (integer num_pulses 2)
-(integer max_iterations 50) 
+(integer max_iterations 15) 
 (n_pulse_score objective)
