--- a/input_files/jones_optical.in
+++ b/input_files/jones_optical.in
@@ -1,11 +1,12 @@
-#testing the euler integrator
-(jones_optical simulation (euler_sde integrator (double stepsize 0.0002) (integer calc_dw 0) ( double dw_weight 1)))
-#(jones_optical simulation)
+!testing the euler integrator
+#include c_elegans.in
+(jones_optical simulation (c_elegans rhs) (euler_sde integrator (double stepsize 0.0001) (integer calc_dw 0) ( double dw_weight 7)))
+!(jones_optical simulation)
 (double t0 0)
-(double int_len 1.5)
+(double int_len 7)
 (double change_threshold 1e-3)
 (integer num_jones_segments 1)
 (double jones_int_dist 0.0)
 (integer num_pulses 2)
-(integer max_iterations 15) 
+(integer max_iterations 1) 
 (n_pulse_score objective)
