--- a/SFMT/makefile
+++ b/SFMT/makefile
@@ -11,10 +11,10 @@ all: $(DSFMT_OBJ)
 
 $(LIB_PATH)/dsfmt.o: dSFMT.c
 	@rm -f $(LIB_PATH)/dsfmt.o
-	$(CPP) -c dSFMT.c $(INC_PATH) -o $(LIB_PATH)/dsfmt.o -O3 -m64 -march=native $(FASTMATH) -DHAVE_SSE2 -DDSFMT_MEXP=521
+	$(CPP) -c dSFMT.c $(INC_PATH) -o $(LIB_PATH)/dsfmt.o -O3 -m64 -march=native $(FASTMATH) -DHAVE_SSE2 -DDSFMT_MEXP=521 -msse2 -mfpmath=sse
 $(LIB_PATH)/sfmt.o: SFMT.c
 	@rm -f $(LIB_PATH)/sfmt.o
-	$(CPP) -c SFMT.c $(INC_PATH) -o $(LIB_PATH)/sfmt.o -O3 -m64 -march=native $(FASTMATH) -DHAVE_SSE2 -DSFMT_MEXP=607
+	$(CPP) -c SFMT.c $(INC_PATH) -o $(LIB_PATH)/sfmt.o -O3 -m64 -march=native $(FASTMATH) -DHAVE_SSE2 -DSFMT_MEXP=607 -msse2 -mfpmath=sse
 
 .PHONY: clean
 
