--- a/src/input_files/infile.in
+++ b/src/input_files/infile.in
@@ -1,7 +1,7 @@
 !#include rhs_CNLS.in
 #include c_elegans.in
-!#include euler_sde.in
-#include rk45.in
+#include euler_sde.in
+!#include rk45.in
 #include toroidal.in
 !#include jones_optical.in
 #include ode_sim.in
